--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="pink">#f09f9c</color>
+    <color name="emerald">#32936f</color>
+    <color name="crayola">#ffd166</color>
+    <color name="bluejeans">#4bb3fd</color>
+    <color name="aquamarine">#78fecf</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
