--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.slavov17.aura.ui.gallery.GalleryFragment"
+        android:name="com.slavov17.aura.ui.bluetooth.BluetoothFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
 
