--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -5,7 +5,7 @@
     android:id="@+id/or_label"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".DashBoard">
 
     <EditText
         android:id="@+id/full_name"
