--- a/app/src/main/res/layout/fragment_bluetooth.xml
+++ b/app/src/main/res/layout/fragment_bluetooth.xml
@@ -4,12 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:context=".ui.bluetooth.BluetoothFragment">
 
+
+    <Button
+        android:id="@+id/scan_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/scan" />
 
     <ListView
         android:id="@+id/ble_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+    </ListView>
 </LinearLayout>
