--- a/app/src/main/res/layout/fragment_bluetooth.xml
+++ b/app/src/main/res/layout/fragment_bluetooth.xml
@@ -10,25 +10,53 @@
 
     <Button
         android:id="@+id/scan_btn"
-        android:layout_width="94dp"
-        android:layout_height="50dp"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="70dp"
+        android:layout_height="49dp"
+        android:layout_margin="0pt"
+        android:background="@color/bluejeans"
+        android:divider="@null"
+        android:padding="0pt"
         android:text="@string/scan"
+        android:textAlignment="center"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.58"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.042" />
+
+    <ImageView
+        android:id="@+id/bt_scan_img"
+        android:layout_width="44dp"
+        android:layout_height="49dp"
+        android:background="@color/bluejeans"
+        android:src="@android:drawable/stat_sys_data_bluetooth"
+        android:tint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.419"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.105" />
+        app:layout_constraintVertical_bias="0.042"
+        app:srcCompat="@android:drawable/stat_sys_data_bluetooth" />
 
     <ProgressBar
         android:id="@+id/bt_loading"
         style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="44dp"
+        android:layout_height="49dp"
+        android:background="@color/bluejeans"
+        android:divider="@null"
+        android:indeterminateTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.419"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></ProgressBar>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.042"></ProgressBar>
 
     <ListView
         android:id="@+id/ble_list"
