--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -46,7 +46,7 @@
             app:srcCompat="@drawable/ic_gauge_around" />
 
         <TextView
-            android:id="@+id/gauge_value"
+            android:id="@+id/eco2_gauge_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/no_data_label"
